<resources>
    <string name="app_name">Tabs</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>
    <string name="account">Account</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="update_comment1">There is a fire in <b>sector 3</b></string>
    <string name="health">Health</string>
    <string name="health_comment1">You ate an apple today!</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_comment1">You have <b>29</b> meetings on your calendar tomorrow.</string>
    <string name="enable_friends">Enable Friends</string>
    <string name="title" />

</resources>
