<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textview_top_box"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:text="@string/recent_updates"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/updates_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updates"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/textview_bottom_box"
        android:elevation="3dp"
        android:padding="12dp"
        android:text="@string/update_comment1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updates_comment"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_top_box"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:text="@string/health"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/health_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/health"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/textview_bottom_box"
        android:elevation="3dp"
        android:padding="12dp"
        android:text="@string/health_comment1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/health_comment"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_top_box"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:text="@string/upcoming"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/upcoming_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upcoming"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/textview_bottom_box"
        android:elevation="3dp"
        android:padding="12dp"
        android:text="@string/upcoming_comment1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

</RelativeLayout>